# health-checker

./: Cargo.toml  README.md  Settings.toml
src/: check_backup.rs  check_health.rs  discord.rs  main.rs
