[package]
name = "health_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
config = "0.14.0"
error-chain = "0.12.4"
reqwest = "0.12.3"
serenity = { version = "0.12.1", features = ["model", "client"] }
tokio = { version = "1.37.0", features = ["full"] }
